Fixed a bug by increasing the navbar z-index

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -41,7 +41,7 @@ h4 {
   justify-content: space-between;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 99;
 }
 
 .navigationbar__nav {
